# VotingGame

./: .gitignore  fabfile.py  voting.cabal
resources/: style.css
script/: find-issues.hs
src/: VotingGame.hs
src/VotingGame/: Database.hs  Handlers.hs  IssueParser.hs  Snaplet.hs  Types.hs  Views.hs
