Name: scheduling-game
Author: Oliver Charles
Build-type: Simple
Version: 0.1
Cabal-version: >= 1.9

Executable scheduling-game
  hs-source-dirs: src
  Main-is: VotingGame.hs
  Build-depends:
    base >= 4 && < 5,
    snaplet-hdbc >= 0.6.3 && < 0.7,
    snap >= 0.6.0.1 && < 0.7,
    data-lens-template >= 2.1.1.1 && < 3,
    HDBC-postgresql >= 2.3.2.0 && < 3,
    mtl >= 2.0.1.0 && < 3,
    text >= 0.11.1.5 && < 0.12,
    containers >= 0.4.0.0 && < 0.5,
    HDBC >= 2.3.1.0 && < 3,
    blaze-html >= 0.4.1.6 && < 0.5,
    snap-blaze >= 0.0.0.1 && < 0.1,
    snap-core >= 0.6 && < 0.7,
    curl >= 1.3.7 && < 1.4,
    transformers >= 0.2.2.0 && < 0.3,
    bytestring >= 0.9.1.10 && < 1,
    snap-server >= 0.6 && < 0.7,
    xml-types

Executable scheduling-game-sync
  hs-source-dirs: script src
  Main-is: find-issues.hs
  Build-depends:
    base >= 4 && <5,
    http-conduit,
    xml-conduit,
    conduit,
    text >= 0.11.1.5 && < 0.12,
    bytestring >= 0.9.1.10 && < 1,
    HDBC >= 2.3.1.0 && < 3,
    HDBC-postgresql >= 2.3.2.0 && < 3,
    xml-types,
    transformers >= 0.2.2.0 && < 0.3
