Name: scheduling-game
Author: Oliver Charles
Build-type: Simple
Version: 0.1
Cabal-version: >= 1.9

Executable scheduling-game
  hs-source-dirs: src
  Main-is: VotingGame.hs
  Build-depends:
    base >= 4 && < 5,
    snaplet-postgresql-simple,
    snap >= 0.9 && < 0.10,
    data-lens-template >= 2.1.1.1 && < 3,
    postgresql-simple,
    mtl >= 2.0.1.0 && < 3,
    text >= 0.11.1.5 && < 0.12,
    containers >= 0.4.0.0 && < 0.5,
    blaze-html >= 0.5.0.0 && < 0.6,
    snap-blaze >= 0.2 && < 0.3,
    snap-core >= 0.9 && < 0.10,
    curl >= 1.3.7 && < 1.4,
    transformers >= 0.3 && < 0.4,
    bytestring >= 0.9.1.10 && < 1,
    snap-server >= 0.9 && < 0.10,
    xml-types,
    blaze-markup >= 0.5.1.0 && < 0.6

Executable scheduling-game-sync
  hs-source-dirs: script src
  Main-is: find-issues.hs
  Build-depends:
    base >= 4 && <5,
    http-conduit,
    xml-conduit,
    conduit,
    text >= 0.11.1.5 && < 0.12,
    bytestring >= 0.9.1.10 && < 1,
    postgresql-simple,
    xml-types,
    transformers >= 0.3 && < 0.4
